Update sandbox config to handle additional data sources beyond pscheduler.

--- a/logstash_pipeline/05-geoip.conf
+++ b/logstash_pipeline/05-geoip.conf
@@ -1,6 +1,7 @@
 # Lookup GeoIP information for IP fields
 
 filter {
+  if [@metadata][source] == "pscheduler" {
 
     if [meta][source][ip] {
         geoip {
@@ -64,5 +65,5 @@ filter {
           }
         }
     }
-    
+  }
 }
