--- a/logstash_pipeline/99-outputs.conf
+++ b/logstash_pipeline/99-outputs.conf
@@ -10,4 +10,11 @@ output {
             template_overwrite => true
         }
     }
+    if [@metadata][source] == "ss" or [@metadata][source] == "tcptrace" {
+       elasticsearch {
+           hosts => ["elasticsearch"]
+	   index => "%{[@metadata][source]}-%{+YYYY.MM.dd}"
+       }
+       stdout { codec => rubydebug }
+    }
 }
