--- a/logstash_pipeline/01-inputs.conf
+++ b/logstash_pipeline/01-inputs.conf
@@ -5,7 +5,7 @@ input {
     # Replace the queue and key name, if needed. 
     rabbitmq{
         host     => "${rabbitmq_input_host:localhost}"
-        user     => "${rabbitmq_input_username:guest}"	        
+        user     => "${rabbitmq_input_username:guest}"
         password => "${rabbitmq_input_pw:guest}"
         queue    => 'pscheduler_raw'
         key      => 'pscheduler_raw'
@@ -13,5 +13,33 @@ input {
         durable  => true
         connection_timeout => 10000
         subscription_retry_interval_seconds => 5
+	id => "pscheduler"
+	add_field => { "[@metadata][source]" => "pscheduler" }
+    }
+    rabbitmq{
+        host     => "${rabbitmq_input_host:localhost}"
+        user     => "${rabbitmq_input_username:guest}"
+        password => "${rabbitmq_input_pw:guest}"
+        queue    => 'tcptrace_raw'
+        key      => 'tcptrace_raw'
+        exchange => 'amq.direct'
+        durable  => true
+        connection_timeout => 10000
+        subscription_retry_interval_seconds => 5
+	id => "tcptrace"
+	add_field => { "[@metadata][source]" => "tcptrace" }
+    }
+    rabbitmq{
+        host     => "${rabbitmq_input_host:localhost}"
+        user     => "${rabbitmq_input_username:guest}"
+        password => "${rabbitmq_input_pw:guest}"
+        queue    => 'ss_raw'
+        key      => 'ss_raw'
+        exchange => 'amq.direct'
+        durable  => true
+        connection_timeout => 10000
+        subscription_retry_interval_seconds => 5
+	id => "ss"
+	add_field => { "[@metadata][source]" => "ss" }
     }
 }
