--- a/logstash_pipeline/02-pscheduler_common.conf
+++ b/logstash_pipeline/02-pscheduler_common.conf
@@ -6,6 +6,7 @@
 #           NOTE: fingerprint filter can't handle nested objects
 
 filter {
+  if [@metadata][source] == "pscheduler" {
     mutate {
         remove_field => [ "schedule" ]
     }
@@ -46,4 +47,5 @@ filter {
     ruby {
         path => "/usr/share/logstash/pipeline/ruby/pscheduler_test_checksum.rb"
     }
+  }
 }
