--- a/logstash_pipeline/03-normalize_endpoints.conf
+++ b/logstash_pipeline/03-normalize_endpoints.conf
@@ -1,7 +1,9 @@
 # Make source, dest and ip_version consistent
 
 filter {
+  if [@metadata][source] == "pscheduler" {
     ruby {
         path => "/usr/share/logstash/pipeline/ruby/pscheduler_normalize_endpoints.rb"
     }
+  }
 }
