--- a/logstash_pipeline/04-iso8601-duration.conf
+++ b/logstash_pipeline/04-iso8601-duration.conf
@@ -1,6 +1,7 @@
 # Convert IS8601 durations in common fields to seconds
 
 filter {
+  if [@metadata][source] == "pscheduler" {
     ruby {
         path => "/usr/share/logstash/pipeline/ruby/pscheduler_iso8601_duration.rb"
         script_params => { 
@@ -11,4 +12,5 @@ filter {
             ]
         }
     }
+  }
 }
