Add a new log pipeline for job metadata.

--- a/logstash_pipeline/pipelines.yml
+++ b/logstash_pipeline/pipelines.yml
@@ -4,3 +4,5 @@
   path.config: "/usr/share/logstash/pipeline/ss"
 - pipeline.id: tcptrace
   path.config: "/usr/share/logstash/pipeline/tcptrace"
+- pipeline.id: jobmeta
+  path.config: "/usr/share/logstash/pipeline/jobmeta"
